# Grocery-Database

./: .gitignore  README.md  index.html  package-lock.json  package.json  temp  vite.config.js
grocery_table/: README.md
public/: dbAccess.php
src/: App.vue
src/assets/: base.css  main.css  pretend_database.json
src/components/: AddModal.vue  EditPanel.vue  EditPopup.vue  ListEditor.vue  SearchBar.vue  TableItem.vue  TablePanel.vue
src/database_interaction/: dbAccess.js
src/decoding/: bartender.js
src/router/: index.js
src/rust/: Cargo.toml  package-lock.json
src/rust/src/: barcode_reader.rs  lib.rs  search.rs
src/stores/: database.js
src/views/: ScannerView.vue  TableView.vue
