[package]
name = "rust_functions"
description = "Allows JavaScript to use the rust version of the ZXing (Zebra Crossing) library via WebAssembly to decode barcodes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
rxing = "0.4"
image = "0.24"
web-sys = { version = "0.3", features = ["console"] }
serde-wasm-bindgen = "0.6"
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = "0.2"
regex = "1.10"

[profile.release]
lto = true
opt-level = 'z'